# CryptographicProtocols

./: .gitignore  CMakeLists.txt  ChangeEndian.py  LS.sage  RevLin.sage  a.out  decon.py  decon2.py  openssl_derive_example.c  сompare.py
Sources/: CRISPExceptions.hpp  CRISPMessage.cpp  CRISPMessage.hpp  CRISPMessanger.cpp  CRISPMessanger.hpp  CRISPMessenger.cpp  CRISPMessenger.hpp  CTR.hpp  CTR_DRBG.hpp  Cipher.hpp  CryptographicSuites.cpp  CryptographicSuites.hpp  EntropySource.hpp  GFElement.cpp  GFElement.hpp  HMAC.hpp  Hash.hpp  KDF_R_13235651022.hpp  Kuznechik.cpp  Kuznechik.hpp  Lab1Main.cpp  Lab1Utils.cpp  Lab1Utils.hpp  Lab2Main.cpp  Lab3Main.cpp  Lab4Main.cpp  MulTable.hpp  NMAC256.hpp  OMAC.hpp  OpenSSLHash.hpp  OpenSSLKDF_R_13235651022.hpp  OpenSSLKuznechikOMAC.cpp  OpenSSLKuznechikOMAC.hpp  OpenSSLNMAC256.hpp  OpenSSLStreebog256HMAC.hpp  OpenSSLStreebog512HMAC.hpp  SecureBuffer.hpp  SimpleMAC.hpp  Streebog.cpp  Streebog.hpp  (+6 more)
TestsSources/: CRISPMessageTest.cpp  CTRTest.cpp  CTR_DRBGTest.cpp  GFElementTest.cpp  HMACTest.cpp  KDF_R_13235651022Test.cpp  KuznechikTest.cpp  Lab1OpensslTest.cpp  Lab1Test.cpp  Lab1UtilsTest.cpp  Lab2Test.cpp  Lab3Test.cpp  Lab4Test.cpp  NMAC256Test.cpp  OMACTest.cpp  SecureBufferDynamicTest.cpp  SecureBufferTest.cpp  SimpleMACTest.cpp  StreebogTest.cpp  UtilsTest.cpp
Лабораторные/: .~lock.Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 1.odt#  .~lock.Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 3.odt#  10MB.txt  125000000.txt  Лаб4.json  Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 1.odt  Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 2.odt  Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 3.odt  Семин Владислав ККСО-01-20. Криптографические протоколы. Лабораторная 4.odt  Схема второй лабораторной.json  Схема первой лабораторной.json  Схема третьей лабораторной.json
